--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm run clean && npm run build:app",
+    "build": "npm-run-all clean build:app",
     "build:app": "parcel build src/index.tsx --out-file fish-calendar.js",
     "clean": "rimraf dist",
     "destiny": "destiny src",
@@ -21,6 +21,7 @@
     "destiny": "^0.3.1",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
+    "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
